[package]
name = "crabdxrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dropbox-sdk = "*"
reqwest = {version= "*", features = ["blocking", "json"]}
serde = { version = "*", features = ["derive"] }
serde_json = "*"
log = "*"
crabrs = { path = "../crabrs" }
crabwebrs = { path = "../crabwebrs" }

[profile.release]
debug = 1
