[package]
name = "crabdxrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dropbox-sdk = "*"
reqwest = {version= "*", features = ["blocking", "json"]}
serde = { version = "*", features = ["derive"] }
serde_json = "*"
log = "*"
crabrs = { git = "https://github.com/cshu/crabrs" }
crabwebrs = { git = "https://github.com/cshu/crabwebrs" }

[profile.release]
debug = 1
